# Carbon

./: Evaluator.hs  Lexer.hs  Lexer.x  Main.hs  Parser.hs  Parser.y  README.md  writeUp.md
Carbon-Rust/: Cargo.toml  PATTERN_MATCHING_ORGANIZATION.md  README.md  functionEx.cb
Carbon-Rust/docs/: CARBON_STATUS_REPORT.md  SYNTAX_GUIDE.md
Carbon-Rust/examples/: advanced_patterns.cb  auto_methods_simple.cb  comprehensive_demo.cb  comprehensive_demo_simple.cb  debug_assignment.cb  debug_do_while.cb  debug_minimal.cb  do_while_complete_test.cb  do_while_first.cb  do_while_simple_test.cb  do_while_test.cb  do_while_with_print.cb  do_while_working.cb  enhanced_classes.cb  for_loops.cb  function.cb  simple_class_test.cb  simple_do_while.cb  simple_tuple_test.cb  test_all_len.cb  test_arraylist_len.cb  test_auto_methods.cb  test_haskell_style_map.cb  test_len_error.cb  test_map_vs_Map.cb  tuple_guard_demo.cb
Carbon-Rust/examples/basic_examples/: basic_test.cb  basic_tuples_demo.cb  correct_syntax_demo.cb  function.cb  new_syntax_test.cb  simple_for_test.cb  simple_functions.cb  simple_match.cb  simple_method_test.cb  simple_working_functions.cb  test_all_len.cb  test_arraylist_len.cb  test_basic.cb  test_function.cb  test_functions.cb  test_go_syntax.cb  test_len_error.cb  test_oop.cb  test_operators.cb  test_print.cb  test_simple.cb  test_string_len.cb  test_working_features.cb
Carbon-Rust/examples/data_structures/: data_methods_test.cb
Carbon-Rust/src/: ast.rs  error.rs  evaluator.rs  lexer.rs  parser.rs  value.rs
Carbon-Rust/tests/: test_evaluator.rs  test_value.rs
(+173 files in other folders)
